--- a/index.html
+++ b/index.html
@@ -5,26 +5,38 @@
 		<meta charset="utf-8">
 		<meta name="description" content ="Kris is practicing">
 		<meta name="author" content="Kristian Kasinger">
+
+		<!-- css (leaflet and custom) -->
 		<link rel="stylesheet" type="text/css" href="css_for_map.css">
+		<link rel="stylesheet" type="text/css" href="css/leaflet.css">
+
+		<!-- JQUERY and Leaflet library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="js/leaflet_library/leaflet.js"></script>
 			
 	</head>
 
 	<body>
-		<h1><a href="abgeordnetenwatch.de" style="color: rgb(80,80,80);">Abgeordnetenwatch.de</a></h1>
+		<h1><a href="abgeordnetenwatch.de" style="color: rgb(80,80,80);">Abgeordnetenwatch.de <img src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png" height=30px></a></h1>
+
+
 		<div id="description">
 			<h2>About this map</h2>
 			<p>This map will revolutionise how you, the wonderful user, will use and engage with the website <a href="abgeordnetenwatch.de">abgeordnetenwatch.de</a>.
 			<p>I hope you are read to embark on a journey of uncovering some of the politicians darkest secrets.</p>
 			<p>Map authored by Kristian Kaesinger</p>
 		</div>
-		<div id="map"></div>
 
+		<!-- Map section -->		
+		<div id="map">
+			
 		</div>
+		
 
 
+		<script type="text/javascript" src="js/js_main.js"></script>
 
-		<script type="text/javascript" src="js/js.js"></script>
-		<!-- <script src="map.js"></script> -->
+
 
 	</body>
 
