--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<meta charset="utf-8">
 		<meta name="description" content ="Kris is practicing">
 		<meta name="author" content="Kristian Kasinger">
+		<!-- disables unwanted scrolling on mobile devices -->
+		<meta name="viewport" content="width=device-width, 
+    	initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<!-- css (leaflet and custom) -->
 		<link rel="stylesheet" type="text/css" href="css_for_map.css">
