--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<!-- JQUERY and Leaflet library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
+		<script src="js/js_functions.js"></script>
 			
 	</head>
 
