Fixed level highlighting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
 		<script src="js/js_functions.js"></script>
+		<!-- Leaflet event forwarder plugin -->
+		<script src="js/leaflet_library/leaflet-event-forwarder-master/dist/leaflet-event-forwarder.js"></script>
 			
 	</head>
 
@@ -26,8 +28,8 @@
 
 		<div id="description">
 			<h2>About this map</h2>
-			<p>This map will revolutionise how you, the wonderful user, will use and engage with the website <a href="abgeordnetenwatch.de">abgeordnetenwatch.de</a>.
-			<p>I hope you are read to embark on a journey of uncovering some of the politicians darkest secrets.</p>
+			<p>PLACE HOLDER <a href="abgeordnetenwatch.de">abgeordnetenwatch.de</a>.
+			<p>PLAC EHOLDER</p>
 			<p>Map authored by Kristian Kaesinger</p>
 		</div>
 
