improvements on panning and label placement

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<!-- css (leaflet and custom) -->
 
 		<link rel="stylesheet" type="text/css" href="css/leaflet.css">
-		<link rel="stylesheet" type="text/css" href="css_for_map.css">
+		<link rel="stylesheet" href="css_for_map_v1.css" media="all" type="text/css" >
+
 
 		<!-- JQUERY and Leaflet library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
