--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- css (leaflet and custom) -->
 
 		<link rel="stylesheet" type="text/css" href="css/leaflet.css">
-		<link rel="stylesheet" href="css_for_map_v2.css" media="all" type="text/css" >
+		<link rel="stylesheet" href="css_for_map_v3-3.css" media="all" type="text/css" >
 
 
 		<!-- JQUERY and Leaflet library -->
