--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 
 		<div id="description">
-			<h2>About this map</h2>
-			<p>PLACE HOLDER <a href="abgeordnetenwatch.de">abgeordnetenwatch.de</a>.
-			<p>PLAC EHOLDER</p>
-			<p>Map authored by Kristian Kaesinger</p>
+			<h2>Instructions</h2>
+			<p><b>Left Click</b> to zoom closer.</p>
+			<p><b>Right Click</b> to zoom away.</p>
+			<p style="font-size: 12px">Map authored by Kristian Kaesinger</p>
 		</div>
 
 		<!-- Map section -->		
