--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 		<!-- css (leaflet and custom) -->
 
 		<link rel="stylesheet" type="text/css" href="css/leaflet.css">
+		<link rel="stylesheet" type="text/css" href="css/leaflet-sidebar.css">
 		<link rel="stylesheet" href="css_for_map_v3-3.css" media="all" type="text/css" >
 
 
 		<!-- JQUERY and Leaflet library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
+		<!-- for dynamic vector layer loading -->
+		<script src="https://unpkg.com/geojson-vt@3.2.0/geojson-vt.js"></script>
+		<!-- sidebar -->
+		<script src="js/libraries/leaflet-sidebar.js"></script>
+
+
 		<script src="js/js_functions.js"></script>
 
 			
