--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 		<link rel="stylesheet" href="css_for_map_v3-4.css" media="all" type="text/css" >
 
 
-		<!-- JQUERY and Leaflet library -->
+		<!-- JQUERY (and fit text plugin) and Leaflet library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="js/libraries/fitty.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
 		<!-- for dynamic vector layer loading -->
 		<!-- sidebar -->
@@ -28,20 +29,22 @@
 
 		<script src="js/js_functions.js" charset="utf-8"></script>
 
-			
+	
 	</head>
 
 	<body>
-		<h1><a href="abgeordnetenwatch.de" style="color: rgb(80,80,80);">Abgeordnetenwatch.de <img src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png" height=30px></a></h1>
+		<!--
+		<h1><a href="abgeordnetenwatch.de" style="color: rgb(80,80,80);">Abgeordnetenwatch.de <img src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png" height=30px></a></h1> 
+	-->
 
-
-		<div id="description">
-			<h2>Instructions</h2>
-			<p><b>Left Click</b> to zoom closer.</p>
-			<p><b>Right Click</b> to zoom away.</p>
-			<p style="font-size: 12px">Map authored by Kristian Kaesinger</p>
+		<div id="backdrop">" "
+			<div id="description">
+				<h2>Instructions</h2>
+				<p><b>Left Click</b> to zoom in.</p>
+				<p><b>Right Click</b> to zoom out.</p>
+				<p style="font-size: 12px">Map authored by Kristian Kaesinger</p>
+			</div>
 		</div>
-
 
 
 		<!-- Map section -->		
