added external data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/libraries/fitty.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
+		<script src="js/libraries/leaflet.overintent.js"></script>
 		<!-- for dynamic vector layer loading -->
 		<!-- sidebar -->
 		<script src="js/libraries/leaflet-sidebar.js"></script>
