improvements to sidebar

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
 		<link rel="stylesheet" href="css_for_map_v3-4.css" media="all" type="text/css" >
 
-
+		<!-- Font Awesome library -->
+		<script src="https://kit.fontawesome.com/a75b517855.js" crossorigin="anonymous"></script>
 		<!-- JQUERY (and fit text plugin) and Leaflet library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/libraries/fitty.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
-		<script src="js/libraries/leaflet.overintent.js"></script>
-		<!-- for dynamic vector layer loading -->
+
+
 		<!-- sidebar -->
 		<script src="js/libraries/leaflet-sidebar.js"></script>
 
@@ -47,8 +48,7 @@
 			</div>
 		</div>
 
-
-		<!-- Map section -->		
+		<!-- Map section  <a href='"+ politicianData.abgeordnetenwatch_url +"' target='_blank'></a>-->		
 		<div id="map">
 			
 		</div>
