--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<link rel="stylesheet" type="text/css" href="css/leaflet.css">
 		<link rel="stylesheet" type="text/css" href="css/leaflet-sidebar.css">
+		<link rel="stylesheet" href="css/leaflet-control-condended-attribution.css" />
 
 		<link rel="stylesheet" href="css_for_map_v3-4.css" media="all" type="text/css" >
 
@@ -22,6 +23,9 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/libraries/fitty.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
+		<!-- attribution plugin -->
+		<script type="text/javascript" src="js/libraries/leaflet-control-condended-attribution.js"></script>
+
 
 
 		<!-- sidebar -->
