improved attribution, added header and logo
still needs cleanup of code

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/libraries/fitty.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
-		<!-- attribution plugin -->
-		<script type="text/javascript" src="js/libraries/leaflet-control-condended-attribution.js"></script>
+
+
 
 
 
@@ -32,8 +32,8 @@
 		<script src="js/libraries/leaflet-sidebar.js"></script>
 
 
-
 		<script src="js/js_functions.js" charset="utf-8"></script>
+
 
 	
 	</head>
@@ -43,21 +43,32 @@
 		<h1><a href="abgeordnetenwatch.de" style="color: rgb(80,80,80);">Abgeordnetenwatch.de <img src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png" height=30px></a></h1> 
 	-->
 
-		<div id="backdrop">" "
+	<div id='everything'>
+<!-- 		<img id='logo' src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png"> -->
+		<div id='header'>
+			<div id='slogan'><b>Finde das abgeordnetenwatch.de Profil von deinem lokalen Bundestagsabgeordneten.</b></div>
+		</div>
+
+		<div id="backdrop"> 
 			<div id="description">
 				<h2>Instructions</h2>
 				<p><b>Left Click</b> to zoom in.</p>
 				<p><b>Right Click</b> to zoom out.</p>
-				<p style="font-size: 12px">Map authored by Kristian Kaesinger</p>
+<!-- 				<p style="font-size: 12px">Map authored by Kristian Kaesinger</p> -->
 			</div>
 		</div>
-
+		<div id='aw'>
+			<a href='https://abgeordnetenwatch.de' target='_blank'><img id='logo' src='images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png'></a>
+		</div> 
+	</div>
 		<!-- Map section  <a href='"+ politicianData.abgeordnetenwatch_url +"' target='_blank'></a>-->		
 		<div id="map">
 			
 		</div>
 
-		<!-- SIDEBAR -->
+
+
+
 
 		
 
