pre release version, improved header(language), better labels

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 		<meta name="viewport" content="width=device-width, 
     	initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<!-- css (leaflet and custom) -->
 
+		<!-- Font Awesome library -->
+		<script src="https://kit.fontawesome.com/a75b517855.js" crossorigin="anonymous"></script>
+		<!-- css (leaflet and custom) -->
 		<link rel="stylesheet" type="text/css" href="css/leaflet.css">
 		<link rel="stylesheet" type="text/css" href="css/leaflet-sidebar.css">
 		<link rel="stylesheet" href="css/leaflet-control-condended-attribution.css" />
 
 		<link rel="stylesheet" href="css_for_map_v3-4.css" media="all" type="text/css" >
 
-		<!-- Font Awesome library -->
-		<script src="https://kit.fontawesome.com/a75b517855.js" crossorigin="anonymous"></script>
+
 		<!-- JQUERY (and fit text plugin) and Leaflet library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/libraries/fitty.min.js"></script>
@@ -47,13 +48,14 @@
 <!-- 		<img id='logo' src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png"> -->
 		<div id='header'>
 			<div id='slogan'><b>Finde das abgeordnetenwatch.de Profil von deinem lokalen Bundestagsabgeordneten.</b></div>
+			<div id='language'><a href="https://translate.google.com/translate?sl=de&tl=en&u=https%3A%2F%2Fanonymous-kris.github.io%2Fabgeordnetenwatch_webmap%2Findex.html">English</a> / <a href="https://anonymous-kris.github.io/abgeordnetenwatch_webmap/index.html">Deutsch</a></div>
 		</div>
 
 		<div id="backdrop"> 
 			<div id="description">
-				<h2>Instructions</h2>
-				<p><b>Left Click</b> to zoom in.</p>
-				<p><b>Right Click</b> to zoom out.</p>
+				<h2>Anleitung</h2>
+				<p><b>Linksklick:</b> zoom in</p>
+				<p><b>Rechtsklick:</b> zoom out</p>
 <!-- 				<p style="font-size: 12px">Map authored by Kristian Kaesinger</p> -->
 			</div>
 		</div>
