--- a/index.html
+++ b/index.html
@@ -1,49 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Abgeordnetenwatch | Kartenansicht</title>
+		<title>Abgeordnetenwatch.de | Kartenansicht</title>
 		<meta charset="utf-8">
-		<meta name="description" content ="Kris is practicing">
-		<meta name="author" content="Kristian Kasinger">
+		<meta name="description" content ="University of GLasgow - Masters Project">
+		<meta name="author" content="Kristian Kaesinger">
 		<!-- disables unwanted scrolling on mobile devices -->
 		<meta name="viewport" content="width=device-width, 
     	initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-
 		<!-- Font Awesome library -->
 		<script src="https://kit.fontawesome.com/a75b517855.js" crossorigin="anonymous"></script>
-		<!-- css (leaflet and custom) -->
+		<!-- Leaflet, and sidebar CSS -->
 		<link rel="stylesheet" type="text/css" href="css/leaflet.css">
 		<link rel="stylesheet" type="text/css" href="css/leaflet-sidebar.css">
-		<link rel="stylesheet" href="css/leaflet-control-condended-attribution.css" />
+		<!-- custom CSS -->
+		<link rel="stylesheet" href="css_general.css" media="all" type="text/css" >
 
-		<link rel="stylesheet" href="css_for_map_v3-4.css" media="all" type="text/css" >
-
-
-		<!-- JQUERY (and fit text plugin) and Leaflet library -->
+		<!-- JQUERY (and fitty text plugin) and Leaflet library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="js/libraries/fitty.min.js"></script>
 		<script src="js/leaflet_library/leaflet.js"></script>
-
-
-
-
-
 		<!-- sidebar -->
 		<script src="js/libraries/leaflet-sidebar.js"></script>
-
-
+		<!-- Custom JS -->
 		<script src="js/js_functions.js" charset="utf-8"></script>
-
-
-	
 	</head>
 
 	<body>
-		<!--
-		<h1><a href="abgeordnetenwatch.de" style="color: rgb(80,80,80);">Abgeordnetenwatch.de <img src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png" height=30px></a></h1> 
-	-->
-
 	<div id='everything'>
 <!-- 		<img id='logo' src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png"> -->
 		<div id='header'>
@@ -63,10 +47,10 @@
 			<a href='https://abgeordnetenwatch.de' target='_blank'><img id='logo' src='images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png'></a>
 		</div> 
 	</div>
+
+
 		<!-- Map section  <a href='"+ politicianData.abgeordnetenwatch_url +"' target='_blank'></a>-->		
-		<div id="map">
-			
-		</div>
+	<div id="map"></div>
 
 
 
@@ -75,7 +59,7 @@
 		
 
 
-		<script type="text/javascript" src="js/js_main.js"></script>
+	<script type="text/javascript" src="js/js_main.js"></script>
 
 
 
