removed language support

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 
 	<body>
 	<div id='everything'>
-<!-- 		<img id='logo' src="images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png"> -->
 		<div id='header'>
 			<div id='slogan'><b>Finde das abgeordnetenwatch.de Profil von deinem lokalen Bundestagsabgeordneten.</b></div>
-			<div id='language'><a href="https://translate.google.com/translate?sl=de&tl=en&u=https%3A%2F%2Fanonymous-kris.github.io%2Fabgeordnetenwatch_webmap%2Findex.html">English</a> / <a href="https://anonymous-kris.github.io/abgeordnetenwatch_webmap/index.html">Deutsch</a></div>
+<!-- 			<div id='language'>English / <a href="https://anonymous-kris.github.io/abgeordnetenwatch_webmap/index.html">Deutsch</a></div> -->
 		</div>
 
 		<div id="backdrop"> 
