fixed fitty text bug

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	<body>
 	<div id='everything'>
 		<div id='header'>
-			<div id='slogan'><b>Finde das abgeordnetenwatch.de Profil von deinem lokalen Bundestagsabgeordneten.</b></div>
-<!-- 			<div id='language'>English / <a href="https://anonymous-kris.github.io/abgeordnetenwatch_webmap/index.html">Deutsch</a></div> -->
+			<div id='slogan'><b id=headline>Finde das abgeordnetenwatch.de Profil von deinem lokalen Bundestagsabgeordneten.</b></div>
+<!--  			<div id='language'>English / <a href="https://anonymous-kris.github.io/abgeordnetenwatch_webmap/index.html">Deutsch</a></div> -->
 		</div>
 
 		<div id="backdrop"> 
