logo temporarily disabled

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <!-- 				<p style="font-size: 12px">Map authored by Kristian Kaesinger</p> -->
 			</div>
 		</div>
-		<div id='aw'>
+<!-- 		<div id='aw'>
 			<a href='https://abgeordnetenwatch.de' target='_blank'><img id='logo' src='images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png'></a>
-		</div> 
+		</div>  -->
 	</div>
 
 
