--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Abgeordnetenwatch.de | Kartenansicht</title>
+		<title>Abgeordnete | Kartenansicht</title>
 		<meta charset="utf-8">
 		<meta name="description" content ="University of GLasgow - Masters Project">
 		<meta name="author" content="Kristian Kaesinger">
