--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Abgeordnete | Kartenansicht</title>
+		<title>Bundestagsabgeordnete | Kartenansicht</title>
 		<meta charset="utf-8">
-		<meta name="description" content ="University of GLasgow - Masters Project">
+		<meta name="description" content ="University of Glasgow - Masters Project">
 		<meta name="author" content="Kristian Kaesinger">
 		<!-- disables unwanted scrolling on mobile devices -->
 		<meta name="viewport" content="width=device-width, 
@@ -42,13 +42,13 @@
 <!-- 				<p style="font-size: 12px">Map authored by Kristian Kaesinger</p> -->
 			</div>
 		</div>
-<!-- 		<div id='aw'>
+<!-- 	LOGO
+		<div id='aw'>
 			<a href='https://abgeordnetenwatch.de' target='_blank'><img id='logo' src='images/logo_RGB/Bildmarke/aw_logo_2017_bildmarke_klein.png'></a>
-		</div>  -->
+		</div>
+-->
 	</div>
-
-
-		<!-- Map section  <a href='"+ politicianData.abgeordnetenwatch_url +"' target='_blank'></a>-->		
+		
 	<div id="map"></div>
 
 
